--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -8,4 +8,8 @@ sources:
       tables:
           - name: payment
             description: One record per payment. Includes failed and successful payments for each order.
-          
+            loaded_at_field: _batched_at
+            freshness: 
+              warn_after: {count: 12, period: hour}
+              error_after: {count: 24, period: hour}
+            
